more dockerfile additions

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -7,5 +7,4 @@ RUN git clone --depth=1 https://github.com/amix/vimrc.git ~/.vim_runtime
 RUN git clone https://github.com/preservim/nerdtree.git ~/.vim/pack/vendor/start/nerdtree
 RUN curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-RUN echo "autocmd VimEnter * NERDTree" >> ~/.vimrc
-RUN echo "call plug#begin()\nPlug 'preservim/nerdtree'\nPlug 'ryanoasis/vim-devicons'\nPlug 'sainnhe/gruvbox-material'\ncall plug#end()" >> ~/.vimrc
+COPY .vimrc /root/.vimrc
