--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -8,3 +8,4 @@ RUN git clone https://github.com/preservim/nerdtree.git ~/.vim/pack/vendor/start
 RUN curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 COPY .vimrc /root/.vimrc
+RUN git clone https://github.com/toon-svg/GoByExample.git
