--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -9,3 +9,4 @@ RUN curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 COPY .vimrc /root/.vimrc
 RUN git clone https://github.com/toon-svg/GoByExample.git
+RUN mv GoByExample/ ~/
