--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -8,5 +8,6 @@ RUN git clone https://github.com/preservim/nerdtree.git ~/.vim/pack/vendor/start
 RUN curl -fLo ~/.vim/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 COPY .vimrc /root/.vimrc
+RUN vim -c PlugInstall
 RUN git clone https://github.com/toon-svg/GoByExample.git
 RUN mv GoByExample/ ~/
